[package]
	name = "winconsole"
	version = "0.6.0"
	authors = ["Omar M. <omarkmu@gmail.com>"]
	description = "A wrapper for console-related functions in the Windows API."
	license = "MIT OR Apache-2.0"
	readme = "README.md"
	documentation = "https://omarkmu.github.io/docs/winconsole"
	repository = "https://github.com/omarkmu/winconsole"
	[package.metadata.docs.rs]
		features = ["input"]
		default-target = "x86_64-pc-windows-msvc"

[features]
	default = []
	input = []

[dependencies]
	cgmath = "0.16"
	lazy_static = "1.0"
	rgb = "0.8"
	[dependencies.serde]
		version = "1.0"
		features = ["serde_derive"]
		optional = true
	[dependencies.winapi]
		version = "0.3"
		features = [
			"consoleapi",
			"minwindef",
			"processenv",
			"utilapiset",
			"winbase",
			"wincon",
			"winnls",
			"winnt",
			"winuser"
		]
