[package]
	authors = ["Omar M. <omarkmu@gmail.com>"]
	categories = ["api-bindings"]
	description = "A wrapper for console-related functions in the Windows API."
	documentation = "https://omarkmu.github.io/docs/winconsole"
	keywords = ["console", "input", "terminal", "windows"]
	license = "MIT OR Apache-2.0"
	name = "winconsole"
	readme = "README.md"
	repository = "https://github.com/omarkmu/winconsole"
	version = "0.11.1"

[features]
	default = []
	input = []
	window = []

[dependencies]
	lazy_static = "1.3"
	rgb = "0.8"
    [dependencies.cgmath]
        version = "0.17"
        optional = true
	[dependencies.serde]
		version = "1.0"
		features = ["serde_derive"]
		optional = true
	[dependencies.winapi]
		version = "0.3"
		features = [
			"consoleapi",
			"minwindef",
			"processenv",
			"utilapiset",
			"winbase",
			"wincon",
			"windef",
			"winnls",
			"winnt",
			"winuser"
		]

[dev-dependencies]
	serde_cbor = "0.9"
	serde_json = "1.0"
